# opengl-3d-viewer

./: CMakeLists.txt  README.md
Resources/Shaders/: PixelArt.shader  cube.shader  grid.shader  lighting.shader  shader.shader  test.shader
Resources/Shaders/ModelShader/: model.shader
include/intern/: Mesh.h  Model.h  OrthoGraphicCamera.h  PerspectiveCamera.h  Shader.h  imfilebrowser.h
src/: Mesh.cpp  Model.cpp  Shader.cpp  main.cpp
src/tests/: ModelLoader.cpp  ModelLoader.h  ProceduralSaders.cpp  ProceduralSaders.h  Terrain.cpp  Terrain.h  Test.cpp  Test.h  TextureChanging.cpp  TextureChanging.h
